--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
 *{
     font-family: 'Roboto', sans-serif;
     line-height: 1.5;
+    box-sizing: border-box;
 }
 
 .row{
@@ -11,8 +12,13 @@
     margin: 0 auto;
 }
 
+h5,
+.trustedcustomers{
+    opacity: 0.5;
+}
+
 .purple{
-    color: blueviolet;
+    color: #6415FF;
 }
 
 h1{
@@ -57,9 +63,9 @@ a{
 
 .btn{
     border-radius:999px;
-    background-color: blueviolet;
+    background-color: #6415FF;
     color: white;
-    padding: 12px 32px;
+    padding: 0px 32px;
     height: 40px;
     margin-top: 16px;
     font-weight: bold;
@@ -87,7 +93,7 @@ HEADER
     width: 60%;
 }
 
-.container{
+.container__header{
     display: flex;
     margin-top: 32px;
 }
@@ -95,3 +101,77 @@ HEADER
 .img__header--size{
     width: 100%;
 }
+
+.input__border{
+    position: relative;
+    border-width: 2px;
+    border-radius: 30px;
+    height: 40px;
+    width: 350px ;
+    opacity: 0.6;
+}
+
+.input__button{
+    position: absolute;
+    right: 60%;
+}
+
+.btn__form{
+    margin: 0 auto;
+}
+
+form{
+    display: flex;
+    flex-direction: row;
+}
+
+/*
+
+FEATURES
+
+*/
+
+#features{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.text__top--centre{
+    text-align: center;
+    margin-bottom: 42px;
+}
+
+.container{
+    padding: 80px 0;
+}
+
+.services{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.service{
+    display: flex;
+    width: calc(100% / 3);
+}
+
+.service__text{
+    display: flex;
+    flex-direction: column;
+}
+
+h4{
+    font-size: large;
+}
+
+.bubble__img{
+    border:1px solid #555;
+    border-radius: 999px;
+    padding: 20px;
+    margin-right: 12px;
+  }
+
+  .features__title{
+    font-size: 42px !important;
+  }
