--- a/styles.css
+++ b/styles.css
@@ -227,9 +227,23 @@ h4{
 
   .steps__text--wrapper{
     display: flex;
+    align-items: flex-start;
   }
 
   .para__wrapper{
     display: flex;
     flex-direction: column;
+  }
+
+  .number__big{
+    font-size: 36px;
+    font-weight: 700;
+    color: rgb(203 213 224);
+    margin: 0 12px;
+
+  }
+
+  .row__getstarted{
+    display: flex;
+    flex-direction: row;
   }
